Fixed header weirdness
Too big a gap. Somewhat fixed the nav menu being incorrectly aligned

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,4 +1,5 @@
 main{
+    @include margin(em(-10) em(0) null em(0));
     @include padding(em(0) em(5) null em(5));
     @include prefixer(transition,all 0.5s, webkit moz ms spec );
     &.tucked{
@@ -6,7 +7,8 @@ main{
         @include prefixer(transition,all 0.5s, webkit moz ms spec );
     }
     @include media($desktop) {
-        @include padding(em(40) em(5) null em(5));
+        @include margin(0);
+        @include padding(em(10) em(5) null em(5));
         @include prefixer(transition,all 0.5s, webkit moz ms spec );
     }
     @include yv-Outer-Container();
